--- a/app/globals.css
+++ b/app/globals.css
@@ -14,3 +14,15 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.rightClick {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: calc(50% - 20px);
+  right: 20px;
+  color: yellow !important;
+  display: grid;
+  place-items: center;
+  transition: transform 0.2s;
+}
